Fix a case where Sweep() would fail to purge certain RDF arcs. bug 213512, r=rjc, sr=brendan